@@ -16,6 +16,8 @@ Trunk (unreleased changes)
    HADOOP-2731 Under load, regions become extremely large and eventually cause
                region servers to become unresponsive
    HADOOP-2693 NPE in getClosestRowBefore (Bryan Duxbury & Stack)
+   HADOOP-2599 Some minor improvements to changes in HADOOP-2443
+               (Bryan Duxbury & Stack)
 
   IMPROVEMENTS
    HADOOP-2555 Refactor the HTable#get and HTable#getRow methods to avoid
